--- a/javaweb/Dockerfile
+++ b/javaweb/Dockerfile
@@ -4,6 +4,7 @@ RUN sudo apt-get update
 
 #Install java
 
+RUN sudo apt-get install -y software-properties-common
 RUN sudo apt-get -y install python-software-properties
 RUN sudo add-apt-repository -y ppa:webupd8team/java
 RUN sudo apt-get -y update
