--- a/javaweb/Dockerfile
+++ b/javaweb/Dockerfile
@@ -16,7 +16,7 @@ RUN sudo apt install oracle-java8-set-default
 # Declare JAVA_HOME variable
 #RUN export JAVA_HOME=/usr/lib/jvm/java-8-oracle
 #RUN export PATH=$PATH:$JAVA_HOME/bin
-RUN cp -R tomcat7 /etc/default/tomcat7
+RUN cp -R ./dependancies/tomcat7 /etc/default/tomcat7
 
 # Install Tomcat
 
