--- a/javaweb/Dockerfile
+++ b/javaweb/Dockerfile
@@ -17,6 +17,7 @@ RUN sudo apt install oracle-java8-set-default
 RUN export JAVA_HOME=/usr/lib/jvm/java-8-oracle
 RUN export PATH=$PATH:$JAVA_HOME/bin
 
+COPY ./dependancies/server.xml /etc/tomcat7/server.xml
 COPY ./dependancies/tomcat7 /etc/default/tomcat7
 
 # Install Tomcat
